--- a/photos/templates/photos/photos_list.html
+++ b/photos/templates/photos/photos_list.html
@@ -1,13 +1,23 @@
+{% load staticfiles %}
+
 <html>
 
   <head>
-    <style>
-      body { background: url(http://i1.wp.com/www.celtec.in/wp-content/uploads/2014/03/BSOD.jpg); }
-    </style>
+    <title>PhotosForAll</title>
+    <link rel="stylesheet" href="{% static 'css/site.css' %}">
   </head>
 
   <body>
-
+    <div>
+      <h1>PhotosForAll</h1>
+    </div>
+    <div>
+      {% for photo in photos %}
+        <img src="{{photo.link}}" style="width: 300px; height: 250px">
+        <p>{{photo.title}}</p>
+        <p>{{photo.published_date}}</p>
+      {% endfor %}
+    </div>
   </body>
 
 </html>
