--- a/photos/templates/photos/photo_detail.html
+++ b/photos/templates/photos/photo_detail.html
@@ -3,8 +3,8 @@
 
 {% block content %}
   <div>
-    <img src='{{photo.link}}' style="width: 300px; height: 250px">
-    <a>{{photo.title}}</a>
-    <a>{{photo.published_date}}</a>
+    <img src='{{photo.link}}' style="width: 750px; height: 600px">
+    <p><strong><em>{{photo.title}}</em></strong></p>
+    <p><em>{{photo.published_date}}</em></p>
   </div>
 {% endblock %}
