--- a/photos/templates/photos/photos_list.html
+++ b/photos/templates/photos/photos_list.html
@@ -2,10 +2,10 @@
 
 {% block content %}
   {% for photo in photos %}
-    <img  src="{{photo.link}}" style="width: 300px; height: 250px">
+    <a href="{% url 'photo_detail' pk=photo.pk %}"><img  src="{{photo.link}}" style="width: 400px; height: 300px"></a>
 
-    <a href="{% url 'photo_detail' pk=photo.pk %}">{{photo.title}}</a>
+<!--    <a href="{% url 'photo_detail' pk=photo.pk %}">{{photo.title}}</a>
     <a>{{photo.published_date}}</a>
-
+-->
   {% endfor %}
 {% endblock %}
