--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -1,9 +1,11 @@
 {% extends 'photos/base.html' %}
 
   {% block content %}
-    <h1>New Photo</h1>
-    <form method="POST">{% csrf_token %}
-      {{ form.as_p}}
-      <button type="submit">SAVE</button>
-    </form>
+    <div class="new_photo">
+      <h3 class="new_photo-title">New Photo</h3>
+      <form method="POST">{% csrf_token %}
+        {{ form.as_p}}
+        <button type="submit" class="btn">Publish</button>
+      </form>
+  </div>
   {% endblock %}
