--- a/photos/templates/photos/photos_list.html
+++ b/photos/templates/photos/photos_list.html
@@ -2,10 +2,10 @@
 
 {% block content %}
   {% for photo in photos %}
-    <a href="{% url 'photo_detail' pk=photo.pk %}"><img  src="{{photo.link}}" style="width: 400px; height: 300px"></a>
 
-<!--    <a href="{% url 'photo_detail' pk=photo.pk %}">{{photo.title}}</a>
-    <a>{{photo.published_date}}</a>
--->
+  <section class="image">
+    <a href="{% url 'photo_detail' pk=photo.pk %}"><img  src="{{photo.link}}" class="img-list"></a>
+  </section>
+
   {% endfor %}
 {% endblock %}
