--- a/photos/static/css/site.css
+++ b/photos/static/css/site.css
@@ -1,240 +1,162 @@
-/*
-    ============
-        CSS
-    ============
-*/
-
 body{
-  background: #f0f0f0;
+  background: radial-gradient(at bottom right, #f0f0f0, #f0f0ff);
+  font-family:'Bree Serif', serif;
 }
 
 a{
   text-decoration: none;
-  color: #fff;
 }
 
-a:hover{
-  color: #648880;
+.header{
+  margin: 0 auto;
+  background: linear-gradient(to right top, #2E5B7D,#648880);
+  padding: 0.05px 8px;
+  border-radius: 9px;
+  font-size: 14px;
 }
 
-h1{
-  font-size: 50px;
-  line-height: 56px;
+.name{
+  text-decoration: none;
+  color: #7ECCC7;
+  font-family: 'Pacifico', cursive;
 }
 
-h2{
-  font-size: 30px;
-  line-height: 34px;
-}
-
-h3{
-  font-size: 24px;
-  line-height: 30px;
-}
-
-/*
-================================================
-*/
-
-  /*
-      ===========
-        HEADER
-      ===========
-  */
-
-header{
-  background-color: #293f50;
-  padding-top: 5px;
-  padding-bottom: 10px;
-}
-
-        /*
-            =========
-              HEAD
-            =========
-        */
-
-.head{
-  padding-left: 20px;
-  font-family: "Barrio" ,cursive;
-  font-variant: small-caps;
-  font-weight: 100;
-  font-style: inherit;
-}
-
-
-        /*
-            ==============
-              PHOTO-ADD
-            ==============
-        */
-
-.photo-add{
-  width: 250px;
-  height: 50px;
-  padding-top: 15px;
-  margin-left: 38%;
-  border: 4px solid #fff;
-  border-radius: 15px;
-  text-align: center;
-  font-family: "Bree Serif", serif;
-  font-size: 26px;
-  text-align: center;
-  font-weight: 300;
-  text-transform: capitalize;
-}
-
-
-/*
-================================================
-*/
-
-  /*
-      ===========
-        CONTENT
-      ===========
-  */
-
-.content{
-  width: 100%;
-}
-
-
-      /*
-          ===============
-            IMAGE_LIST
-          ===============
-      */
-
-.image-list{
-  width: 80%;
-  padding-top: 20px;
-  display: block;
-}
-
-              /*
-                  =============
-                      IMAGE
-                  =============
-              */
-
-.image{
-  float:left;
-}
-
-.img-list{
-  margin: 15px 10px 15px 20px;
-  border: 4px solid #c9c9c9;
-  border-radius: 8px;
-  width: 350px;
-  height: 350px;
-}
-
-/*
-================================================
-*/
-
-/*
-    ==========
-      DETAIL
-    ==========
-*/
-
-.detail{
-  text-align: left;
-  padding-left: 350px;
-}
-.detail-img{
-  width: 700px;
-  height: 600px;
-  border-radius: 2%;
-  border: 4px solid #c9c9c9;
-}
-
-.detail-title{
-  width: 700px;
-  border-top: 2px solid #000;
-  padding-top: 20px;
-  font-family: "Autiowide", cursive;
-  font-style: italic;
-  font-variant: small-caps;
-  font-weight: 100;
-}
-
-.detail-time{
-  width: 700px;
-  font-weight: 100;
-  font-family: "Caveat Brush", cursive;
-  font-variant: small-caps;
-  border-bottom: 2px solid #000;
-  padding-bottom: 20px;
-}
-
-#disqus_thread{
-  width: 700px;
-}
-
-/*
-================================================
-*/
-
-/*
-    ==============
-      NEW_PHOTO
-    ==============
-*/
-
-.new_photo{
-  width: 475px;
-  margin-left: 450px;
-  border: 1px solid #000;
-  border-radius: 13px;
-  text-align: center;
-}
-
-.new_photo:hover{
-  background-color: #c0c0c0;
-}
-
-.new_photo-title{
-  font-family: "Pattua One", cursive;
-  font-size: 26px;
-  font-variant: small-caps;
-  font-weight: 300;
-}
-
-form{
-  font-family: "Exo", sans-serif;
-  font-size: 20px;
+.name:hover{
+color:#fff;
 }
 
 .btn{
-  text-transform: uppercase;
-  font-size: 15px;
+  position: fixed;
+  right: 30px;
+  padding-left: 3px;
+  padding-right: 3px;
+  background-color: #1D9ED1;
+  border: 2px solid #1D9ED1;
+  border-radius: 10px;
+  text-decoration: none;
+  font-family:'Bree Serif', serif;
+  font-size: 1.1em;
+  color:#fff;
 }
 
 .btn:hover{
-  background-color: #c9c9c9;
+  text-shadow: 3px 3px 5px #2c2c2c;
+  border-color: #fff;
 }
 
-/*
-================================================
-*/
+.container{
+  width: 960px;
+  margin: 0 auto;
+  margin-left: 30px;
+  margin-right: 30px;
+}
 
-/*
-    ==========
-      FOOTER
-    ==========
-*/
+.content{
+  margin: 20px auto;
+}
 
-footer{
-  background-color: #293f50;
-  margin-top: 20px;
-  margin-bottom: 0;
-  padding-left: 20px;
-  padding-bottom: 15px;
-  font-family: "Francois One", sans-serif;
+img{
+  width: 303px;
+  height: 303px;
+  margin: 5px 3px;
+  border: 2px solid #c0c0c0;
+  border-radius: 7px;
+}
+
+p{
+  font-family: 'Cinzel', 'Cormorant Unicase', serif;
+}
+
+.footer{
+  margin: 0 auto;
+  background:linear-gradient(to right bottom, #2E5B7D,#648880);
+  border-radius: 9px;
+}
+
+.git {
+  padding-top: 4px;
+  color: #7ECCC7;
+}
+
+.git:hover{
+  color:#fff;
+}
+
+.copy{
+  padding-bottom: 4px;
+  color: #7ECCC7;
+}
+
+.copy:hover{
+  color:#fff;
+}
+
+.detail{
+  width: 420px;
+  margin: 0 auto;
+
+}
+
+.img_detail{
+  width:404px;
+  height:404px;
+}
+
+.title{
+  padding-left: 10px;
+  padding-top: 5px;
+  border-top: 1px solid #ccc;
+  font-family: 'Cinzel', 'Cormorant Unicase', serif;
+}
+
+.date{
+  padding-left: 10px;
+  padding-bottom: 5px;
+  font-family: 'Cinzel', 'Cormorant Unicase', serif;
+  text-decoration: underline;
+  border-bottom: 1px solid #ccc;
+}
+
+
+.edit{
+  width: 250px;
+  margin: 0 auto;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-bottom: 2px;
+  background: linear-gradient(to bottom right , #2E5B7D,#648880);
+  color: #7ECCC7;
+}
+
+.edit:hover{
+  background: linear-gradient(to top , #2E5B7D,#648880);
+  color: #fff;
+}
+
+.new{
+  padding-top: 4px;
+  text-align: center;
+  font-family: 'Pacifico', cursive;
+}
+
+
+.form{
+  font-family: 'Cinzel', 'Cormorant Unicase', serif;
   font-variant: small-caps;
-  padding-top: 20px;
-  clear:both;
+  font-weight: 600;
+}
+
+.btn_edit{
+  background-color: #1D9ED1;
+  border: 2px solid #1D9ED1;
+  border-radius: 10px;
+  text-decoration: none;
+  font-family:'Bree Serif', serif;
+  font-size: 1.1em;
+  color:#fff;
+}
+
+.btn_edit:hover{
+  text-shadow: 3px 3px 5px #2c2c2c;
+  border-color: #fff;
 }
